--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ regex = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
+gethostname = "0.2.0"
 log = "0.4"
 log4rs = "0.8.3"
