--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ codegen-units = 1
 panic = 'abort'
 
 [dependencies]
+clap = "2.33.0"
 regex = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
