[+] ignore hosts which redirect to another urls

--- a/tests/nginx-vhosts/vhost2.conf
+++ b/tests/nginx-vhosts/vhost2.conf
@@ -1,18 +1,25 @@
 server {
-    listen      38101;
-    server_name  collections.company.ru;
-
-    WHATEVER
+    listen 123;
 }
 
 server {
-    listen      27239;
-    WHATEVER
+    listen 80;
+    server_name       whatever.ru www.whatever.ru;
+    return 301  https://whatever.ru$request_uri;
 }
 
 server {
-    listen      23512;
-    server_name  collections.company.ru;
+    listen 443;
+    server_name  www.whatever.ru;
+    return 301 https://whatever.ru$request_uri;
+}
 
-    WHATEVER
+server {
+    listen 443 ssl;
+    server_name whatever.ru;
+}
+
+server {
+    listen 23512;
+    server_name gallery.whatever.ru;
 }
