--- a/tests/apache-vhosts/vhost2.conf
+++ b/tests/apache-vhosts/vhost2.conf
@@ -1,24 +1,16 @@
-<VirtualHost crab.somemuseum.ru:80>
-    ServerAdmin support@collections.museum.ru
-    DocumentRoot /var/www/collections.museum.ru/html
-    ServerName collections.e-gallery.ru
-
-    ProxyPass /api http://localhost:19002/api connectiontimeout=600 timeout=600
-
+<VirtualHost whatever.ru:80>
+    ServerName www.whatever.ru whatever.ru
+    Redirect / https://whatever.ru
 </VirtualHost>
 
-<VirtualHost crab.corp.ru:5380>
-    ServerAdmin support@collections.museum.ru
-    DocumentRoot /var/www/collections.museum.ru/html
-    ServerName crab.corp.ru
+<VirtualHost whatever.ru:443>
+    ServerName whatever.ru
+</VirtualHost>
 
-    ProxyPass /api http://localhost:19002/api connectiontimeout=600 timeout=600
+<VirtualHost whatever.ru:5380>
+    ServerName whatever.ru
 </VirtualHost>
 
 <VirtualHost 111.22.33.44:1480>
-    ServerAdmin support@collections.museum.ru
-    DocumentRoot /var/www/collections.museum.ru/html
     ServerName demo.company.ru
-
-    ProxyPass /api http://localhost:19002/api connectiontimeout=600 timeout=600
 </VirtualHost>
