--- a/files/site-discovery.conf
+++ b/files/site-discovery.conf
@@ -1,2 +1,1 @@
-UserParameter=site.discovery,/usr/bin/site-discovery-flea
-UserParameter=vhost.index-page.available[*],/usr/bin/curl -s -L -i $1 | grep -i "200 Ok" > /dev/null; echo $?
+UserParameter=site.discovery,/usr/bin/site-discovery-flea --nginx-vhosts-path=/etc/nginx/sites-enabled
