--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "site-discovery-flea"
+name = "vhost-discovery-tool"
 version = "1.3.3"
 authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
 edition = "2018"
