--- a/files/vhost-discovery.conf
+++ b/files/vhost-discovery.conf
@@ -1,1 +1,1 @@
-UserParameter=site.discovery,/usr/bin/site-discovery-flea --nginx-vhosts-path=/etc/nginx/sites-enabled
+UserParameter=vhost.discovery,/usr/bin/vhdt --nginx-vhosts-path=/etc/nginx/sites-enabled
