[+] support comments in apache config files

--- a/tests/apache-vhosts/vhost2.conf
+++ b/tests/apache-vhosts/vhost2.conf
@@ -9,8 +9,19 @@
 
 <VirtualHost whatever.ru:5380>
     ServerName whatever.ru
+    #  ServerName demo123.company.ru
 </VirtualHost>
 
+# <VirtualHost whatever3.ru:80>
+#    ServerName whatever3.ru
+#</VirtualHost>
+
 <VirtualHost 111.22.33.44:1480>
+    #ServerName demo123.company.ru
     ServerName demo.company.ru
 </VirtualHost>
+
+#<VirtualHost whatever300.ru:18038>
+#    ServerName whatever300.ru
+#Redirect / https://whatever.ru
+#</VirtualHost>
