[+] support comments in nginx config files

--- a/tests/nginx-vhosts/vhost2.conf
+++ b/tests/nginx-vhosts/vhost2.conf
@@ -9,15 +9,24 @@ server {
 }
 
 server {
+#  server {
     listen 443;
     server_name  www.whatever.ru;
+    #  server_name  www.whatever.ru;
     return 301 https://whatever.ru$request_uri;
 }
 
+#server {
 server {
     listen 443 ssl;
+    #server_name whatever.ru;
     server_name whatever.ru;
 }
+
+#server {
+#    listen 443 ssl;
+    #server_name whatever.ru;
+#}
 
 server {
     listen 23512;
