--- a/tests/nginx-vhosts/vhost2.conf
+++ b/tests/nginx-vhosts/vhost2.conf
@@ -9,11 +9,13 @@ server {
 }
 
 server {
-#  server {
+#   server {
     listen 443;
     server_name  www.whatever.ru;
     #  server_name  www.whatever.ru;
+    #  return 301 https://whatever2346.ru$request_uri;
     return 301 https://whatever.ru$request_uri;
+    #return 301 https://whatever345.ru$request_uri;
 }
 
 #server {
@@ -25,7 +27,7 @@ server {
 
 #server {
 #    listen 443 ssl;
-    #server_name whatever.ru;
+    #server_name whatever547345763.ru;
 #}
 
 server {
