[+] add more comments to sample vhost file

--- a/tests/nginx-vhosts/vhost2.conf
+++ b/tests/nginx-vhosts/vhost2.conf
@@ -9,6 +9,13 @@ server {
 }
 
 server {
+    #listen 80;
+    # listen 80;
+    server_name       whatever.ru www.whatever.ru;
+    return 301  https://whatever.ru$request_uri;
+}
+
+server {
 #   server {
     listen 443;
     server_name  www.whatever.ru;
