[+] add more comments to sample vhost file

--- a/tests/nginx-vhosts/vhost2.conf
+++ b/tests/nginx-vhosts/vhost2.conf
@@ -5,14 +5,22 @@ server {
 server {
     listen 80;
     server_name       whatever.ru www.whatever.ru;
-    return 301  https://whatever.ru$request_uri;
+    #return 301  https://whatever.ru$request_uri;
+    #  return 301  https://whatever.ru$request_uri;
+    return 301  https://y345y345ywhatever.ru$request_uri;
 }
 
 server {
     #listen 80;
     # listen 80;
-    server_name       whatever.ru www.whatever.ru;
-    return 301  https://whatever.ru$request_uri;
+    server_name       whatever2353.ru www.whatever777.ru;
+    return 301  https://whatever346456.ru$request_uri;
+}
+
+server {
+    listen 80;
+    server_name       whatever623462346.ru www.whatever234234.ru;
+    #return 301  https://whatever.ru$request_uri;
 }
 
 server {
