[+] add more comments to sample vhost file

--- a/tests/nginx-vhosts/vhost3.conf
+++ b/tests/nginx-vhosts/vhost3.conf
@@ -4,11 +4,13 @@ server {
 
 server {
     listen 80;
+    #return 301  https://g4350gk45g45tever43f34f.ru$request_uri;
     return 301  https://whatever.ru$request_uri;
 }
 
 server {
     listen 443;
+    #  return 301 https://52345234g34gwhatever.ru$request_uri;
     return 301 https://whatever.ru$request_uri;
 }
 
