[~] nginx: take first domain from server_name with multiple domains

--- a/tests/nginx-vhosts/vhost2.conf
+++ b/tests/nginx-vhosts/vhost2.conf
@@ -18,12 +18,6 @@ server {
 }
 
 server {
-    listen 80;
-    server_name       whatever623462346.ru www.whatever234234.ru;
-    #return 301  https://whatever.ru$request_uri;
-}
-
-server {
 #   server {
     listen 443;
     server_name  www.whatever.ru;
@@ -37,7 +31,7 @@ server {
 server {
     listen 443 ssl;
     #server_name whatever.ru;
-    server_name whatever.ru;
+    server_name goodhost.ru      goodhost.domain.local;
 }
 
 #server {
@@ -47,5 +41,5 @@ server {
 
 server {
     listen 23512;
-    server_name gallery.whatever.ru;
+    server_name www.goodhost.ru     db.goodhost.ru;
 }
