[~] Improve vhost redirect detection

--- a/tests/nginx-vhosts/vhost2.conf
+++ b/tests/nginx-vhosts/vhost2.conf
@@ -29,9 +29,30 @@ server {
 
 #server {
 server {
-    listen 443 ssl;
+
     #server_name whatever.ru;
     server_name goodhost.ru      goodhost.domain.local;
+
+    location /robots.txt {
+            alias /opt/supervisor/apps/wildfly/welcome-content/robots.txt;
+        }
+
+    location / {
+        return 301 https://aksjdkajsd.com;
+    }
+
+    listen 443 ssl; # Managed by certbot
+}
+
+server {
+    if ($host = goodhost.ru) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    listen       80;
+
+    server_name  goodhost.ru;
+    return 404; # managed by Certbot
 }
 
 #server {
